2012-12-07  Sergio Martins  <sergio.martins@kdab.com>

        [Qt][Qnx] Fix QNX build by adding missing include.
        https://bugs.webkit.org/show_bug.cgi?id=104359

        Reviewed by Jocelyn Turcotte.

        It's where WEBKIT_EXPORTDATA is defined, so include it. Not sure why other
        platforms aren't failing.

        * WebCoreSupport/QWebPageAdapter.h:

2012-12-06  Pierre Rossi  <pierre.rossi@gmail.com>

        [Qt] QWebView uses the mobile style and doesn't follow Qt's style
        https://bugs.webkit.org/show_bug.cgi?id=104134

        Reviewed by Simon Hausmann.

        Another issue introduced by r136235.
        Fix the order of initialization of the styleFactory and creation of the
        WebCore Page. Since the latter has a RenderTheme member and the creation
        of the appropriate RenderTheme type (QStyle-backed) is dependant on having
        first initialized the theme factory function, we need to postpone this just
        a little bit.

        * WebCoreSupport/QWebPageAdapter.cpp:
        (QWebPageAdapter::QWebPageAdapter):
        (QWebPageAdapter::initializeWebCorePage): Added.
        * WebCoreSupport/QWebPageAdapter.h:
        * WidgetApi/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate): call initializeWebCorePage only after 
        having initialized WebKitWidgets related logic (QStyle hooks in this case).

2012-12-05  Zeno Albisser  <zeno@webkit.org>

        [Qt][Mac] QWebView disappears when the system tries to hide the scrollbars.
        https://bugs.webkit.org/show_bug.cgi?id=104116

        This is a workaround for an issue in Qt that was
        caused by Change-Id: I2000fa50d46b153e981ceafc12a53932a196382e
        in qtbase.
        Since we are drawing the scrollbars by ourselves, there is no
        widget available that needs to be hidden by the style.
        Therefore we have to disable transient scrollbar
        animations on Mac.

        Patch by: J-P Nurmi <jpnurmi@digia.com>
