@@ -1,3 +1,13 @@
+2012-12-10  Andy Shaw  <andy.shaw@digia.com>
+        
+        Check that plugin functionality is enabled before querying the database for installed plugins.
+        https://bugs.webkit.org/show_bug.cgi?id=73671
+
+        Reviewed by Jocelyn Turcotte.
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::FrameLoaderClientQt::objectContentType):
+
 2012-12-07  Sergio Martins  <sergio.martins@kdab.com>
 
         [Qt][Qnx] Fix QNX build by adding missing include.
